# silx-mda

./: README.rst  environment.yml
src/silx/: meson.build
src/silx/io/: mdah5.py  meson.build  utils.py
src/silx/synApps_mdalib/: __init__.py  f_xdrlib.py  mda.py
synApps_mdalib/: __init__.py
tools/: check_meson.py
